final footer overflow fix

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -50,4 +50,5 @@
 
 .footer-copyright {
   overflow: scroll;
+  padding-left: 15px;
 }
